restyle page-edit button to fixed position when text scrolled - if an edit is needed, now there is no need to scroll to top of file - move the div to the main tile - restyle to make fairly unobtrusive - z-index so it floats above text. - opacity 50% so when overlapping, text is visible

--- a/Website/plugins/page-styling/css/page-styling-light.css
+++ b/Website/plugins/page-styling/css/page-styling-light.css
@@ -177,16 +177,21 @@ strong {
   color: #A30031;
 }
 
-.raku.page-header .page-edit {
+.page-edit {
   color: #83858D;
+  left: 95vw;
+  position: fixed;
+  top: 15vh;
+  z-index: 10;
+  opacity: 50%;
 }
-.raku.page-header .page-edit .page-edit-button {
-  background: #f5f5f5;
-  color: black;
+.page-edit .page-edit-button {
+  background: #fafafa;
+  color: #A30031;
   border-color: #cccccc;
 }
-.raku.page-header .page-edit .page-edit-button:hover {
-  background: #f2f2f2;
+.page-edit .page-edit-button:hover {
+  background: #f5f5f5;
 }
 
 /* Raku search page */
